packages/preview/rexllent/0.4.1/README.md
# 🦖 ReXLlenT

[![Universe badge](https://img.shields.io/badge/dynamic/xml?url=https%3A%2F%2Ftypst.app%2Funiverse%2Fpackage%2Frexllent&query=%2Fhtml%2Fbody%2Fdiv%2Fmain%2Fdiv%5B2%5D%2Faside%2Fsection%5B2%2Fdl%2Fdd%5B3%5D&logo=typst&label=Universe&color=%2339cccc)](https://typst.app/universe/package/rexllent)
[![GitHub repository badge](https://img.shields.io/badge/dynamic/toml?url=https%3A%2F%2Fraw.githubusercontent.com%2Fhongjr03%2Ftypst-rexllent%2Frefs%2Fheads%2Fmain%2Ftypst.toml&query=package.version&logo=GitHub&label=GitHub)](https://github.com/hongjr03/typst-rexllent)
[![Test workflow badge](https://github.com/hongjr03/typst-rexllent/actions/workflows/test.yml/badge.svg)](https://github.com/hongjr03/typst-rexllent/actions/workflows/test.yml)

ReXLlenT is a typst package that helps you:

- Convert Excel **xlsx** tables to typst tables, powered by wasm.
- Convert [Spreet](https://github.com/lublak/typst-spreet-package) parsed tables to typst tables. (Supports excel/opendocument spreadsheets but doesn't support parsing styles or merge cells.)

## Usage

Start by importing the package:

```typ
#import "@preview/rexllent:0.4.1": xlsx-parser
```

Then you can use `xlsx-parser` function to convert your xlsx Excel table to typst table. Here is an example:

```typ
#xlsx-parser(read("test.xlsx", encoding: none))
```

By passing `sheet-index` parameter, you can specify the sheet index to parse. The default value is 0.

```typ
#xlsx-parser(read("test.xlsx", encoding: none), sheet-index: 1)
```

You can also select specific columns to parse:

```typ
#xlsx-parser(read("test.xlsx", encoding: none), selected-cols: "A,C,F")
```

By toggling parameters below, you can customize the output table:

- `selected-cols`: Comma-separated list of columns to include (for example: `"A,C,F"`). You can also pass an array like `("A", "C", "F")`.
- `parse-table-style`: Parse table style(columns width, rows height), default is `true`.
- `parse-alignment`: Parse cell content alignment, default is `true`.
- `parse-stroke`: Parse cell stroke, default is `true`.
- `parse-fill`: Parse cell fill, default is `true`.
- `parse-font`: Parse font style, default is `true`.
- `parse-header`: Parse header row, default is `false`.
- `parse-formatted-cell`: Parse formatted cell, default is `false`. Notice that this will cause great performance loss so don't use it unless you need it.
- `eval-as-markup`: Evaluate cell content as typst markup, default is `false`.

_Notice that 0pt height or 0pt width will be parsed as `auto`. Disable `parse-table-style` to prevent this behavior and set the width and height manually._

Extra arguments passed to `xlsx-parser` function will be passed to `table`. Feel free to customize the output table. For the prepend elements(for example: header, hline) you should pass them as array to `prepend-elems` parameter.

```typ
#xlsx-parser(
  read("test.xlsx", encoding: none),
  parse-header: true,
  parse-stroke: false,
  prepend-elems: (table.hline()),
  stroke: (_, y) => {
    if y == 0 {
      return (bottom: black)
    }
  },
  table.hline(),
)
```

![three-line-table](assets/three-line-table.png)

## Work with Spreet

You can also convert Spreet parsed tables to typst tables. Here is an example:

```typ
#import "@preview/spreet:0.1.0"
#import "@preview/rexllent:0.4.1": spreet-parser

#spreet-parser(spreet.decode(read("/tests/data/default.ods", encoding: none)))
```

By passing `sheet-index` parameter, you can specify the sheet index to parse. The default value is 0. The extra arguments passed to `spreet-parser` function will be passed to `table`.

Through this way, you can convert excel/opendocument spreadsheets to typst tables. However, the styles and merge cells will not be parsed due to the limitation of calamine.

## Example

- Excel Table

  ![Excel](assets/excel.png)

- Typst Table (with default parameters)

  ![Typst](assets/example1.png)

- Typst Table (with `parse-table-style: false`)

  ![Typst](assets/example2.png)

- Typst Table (with `parse-alignment: false`)

  ![Typst table with alignment disabled](assets/example3.png)

- Typst Table (with `parse-stroke: false`)

  ![Typst table with stroke disabled](assets/example4.png)

- Typst Table (with `parse-fill: false`)

  ![Typst table with fill disabled](assets/example5.png)

- Typst Table (with `parse-font: false`)

  ![Typst table with font styling disabled](assets/example6.png)

- With Custom Style

  ![Typst table with custom styling](assets/example7.png)

## Pixel Art

You can also convert pixel art to typst table using ReXLlenT. Here are some examples:

- Typst Logo

  ![Typst logo rendered as a table](assets/typst_example1.png)

- Typst Guy

  ![Typst Guy rendered as a table](assets/typst_example2.png)

- _Impression, soleil levant_

  ![Monet's Impression, soleil levant rendered as a table](assets/typst_example3.png)

## TODOs

ReXLlenT is still in development and PRs are welcome. Here are some TODOs (also limitations):

- Implement in-cell image parsing.
- Prevent parsing errors caused by special characters.
- Parse auto width and height instead of treating 0pt as auto.
- Handle hidden rows and columns.
- ...

## Credits

- [lublak/typst-spreet-package](https://github.com/lublak/typst-spreet-package)
- [MathNya/umya-spreadsheet](https://github.com/MathNya/umya-spreadsheet)
- [borgar/numfmt](https://github.com/borgar/numfmt)

## License

This package is licensed under the MIT License.

## Star History

<a href="https://star-history.com/#hongjr03/typst-rexllent&Date">
 <picture>
   <source media="(prefers-color-scheme: dark)" srcset="https://api.star-history.com/svg?repos=hongjr03/typst-rexllent&type=Date&theme=dark" />
   <source media="(prefers-color-scheme: light)" srcset="https://api.star-history.com/svg?repos=hongjr03/typst-rexllent&type=Date" />
   <img alt="Star History Chart" src="https://api.star-history.com/svg?repos=hongjr03/typst-rexllent&type=Date" />
 </picture>
</a>
